# rust-sample

./: .gitignore
02-guessing-game-tutorial/guessing_game/: Cargo.toml
05-struct/example-structs/: Cargo.toml
05-struct/method-syntax/: Cargo.toml
07-define-modules/define-module/: Cargo.toml
07-define-modules/restaurant/: Cargo.toml
1-getting-starting/hello_cargo/: Cargo.toml
10-generics/find_largest_number/: Cargo.toml
10-generics/generics_sample/: Cargo.toml
10-generics/trait_sample/: Cargo.toml
11-automated-test/adder/: Cargo.toml
12-io-project/minigrep/: Cargo.toml
13-iterator-closures/closure_anonymous_function/: Cargo.toml
13-iterator-closures/iterators/: Cargo.toml
2-guessing-game-tutorial/guessing_game_random/: Cargo.toml
4-understanding-ownership/references_borrowing/: Cargo.toml
4-understanding-ownership/slices/: Cargo.toml
5-struct/define/: Cargo.toml
6-enum/enums/: Cargo.toml
9-error-handle/error_handle/: Cargo.toml
control_flow/: Cargo.toml
data_types/: Cargo.toml
enum_sample/: Cargo.toml
functions/: Cargo.toml
guessing_game/: Cargo.toml
guessing_game_random/: Cargo.toml
guessing_game_random_compare/: Cargo.toml
hello_cargo/: Cargo.toml
hello_world/: main
instant_struct/: Cargo.toml
modulo/: Cargo.toml
owner_ship/: Cargo.toml
quiz/: Cargo.toml
shadowing/: Cargo.toml
slice/: Cargo.toml
struct_method/: Cargo.toml
struct_sample/: Cargo.toml
variable_and_mutable/: Cargo.toml
web/todo-api/: Cargo.toml  docker-compose.yml
web/todo-api/src/: entities.rs  main.rs  repositories.rs  todo_api.rs
(+39 files in other folders)
