[package]
name = "todo-api"
version = "0.1.0"
authors = ["Rafael Lillo <rafa_lillo@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"
uuid = "0.8"
postgres = "0.17.0"
serde = { version = "1.0", features = ["derive"] }
